[tool.poetry]
name = "django-crm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_crm"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "4.1.1"
celery = "5.2.7"
python-dotenv = "0.21.0"
django-cors-headers = "3.13.0"
django_extensions = "3.2.1"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.2.0"
drf-yasg = "1.21.4"
django-ses = "3.1.2"
psycopg2-binary = "2.9.3"
whitenoise = "6.2.0"
sentry-sdk = "1.9.8"
wagtail = ">=4.0.2,<4.0.3"
black = "^23.9.1"
isort = "^5.12.0"
arrow = "^1.2.3"
django-phonenumber-field = "^6.3.0"
phonenumbers = "^8.13.20"
redis = "^5.0.0"
pdfkit = "^1.0.0"
pytest = "^7.4.2"
django-pytest = "^0.2.0"
kwargs = "^1.0.1"
drf-spectacular = "^0.26.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
